# pepperoni

./: .gitignore  Cargo.toml  DESIGN.md  README.md  REQUIREMENTS.md  deny.toml  flake.nix
.config/: hakari.toml
.github/workflows/: check.yaml
crates/pepperoni/: Cargo.toml
crates/pepperoni/src/: lease.rs  main.rs  pg.rs  proxy.rs
crates/salami/: Cargo.toml
crates/salami/src/: lib.rs
crates/workspace-hack/: Cargo.toml
src/: enum_ver.rs  lease.rs  lib.rs  main.rs  mock.rs  pg.rs  proxy.rs
