[package]
name = "pepperoni"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
salami = { version = "0.1.0", path = "../salami" }
sqlx = { version = "0.9", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls-ring-webpki",
], default-features = false }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
  "net",
  "rt-multi-thread",
  "macros",
  "io-util",
  "process",
], default-features = false }
